--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,13 +15,19 @@ a {
   box-sizing: border-box;
 }
 
-/* 这用法还是第一次见 */
+/* 检测到系统使用深色模式时使用的样式 */
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    /* 允许元素（表单，滚动条等）指示它可以轻松呈现的配色方案 */
+    /* color-scheme: dark; */
   }
   body {
-    color: white;
-    background: black;
+    /* color: white;
+    background: black; */
   }
+}
+
+/* 提取的样式 */
+.header_right {
+  @apply hidden lg:inline ml-12 leading-5 opacity-60 text-black hover:underline focus:underline;
 }
