feat: 完善一下代码

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100vh;
 }
-
+/* 根结点有一个__next的div */
+#__next {
+  height: 100%;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -13,6 +17,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+::selection {
+  background-color: yellowgreen;
 }
 
 /* 检测到系统使用深色模式时使用的样式 */
@@ -29,5 +37,5 @@ a {
 
 /* 提取的样式 */
 .header_right {
-  @apply hidden lg:inline ml-12 leading-5 opacity-60 text-black hover:underline focus:underline;
+  @apply hidden lg:inline ml-12 leading-5 opacity-60 hover:underline focus:underline;
 }
